# rmc-serve-camera

./: Cargo.toml  README.md
camera_core/: Cargo.toml
camera_core/src/: capture.rs  capture_state.rs  error.rs  lib.rs  linux.rs  logging.rs
http_camera/: Cargo.toml
http_camera/src/: main.rs
websocket_camera/: Cargo.toml
