[package]
name = "http_camera"
version = "0.1.0"
authors = ["noah <nomaxx117@gmail.com>"]
edition = "2018"

dependencies]

[dependencies.camera_core]
path = "../camera_core"

[dependencies.actix-web]
version = "2.0"
default-features = false

[dependencies.actix-rt]
version = "1.0"
default-features = false