[package]
name = "http_camera"
version = "0.1.0"
authors = ["noah <nomaxx117@gmail.com>"]
edition = "2018"

[dependencies.camera_core]
path = "../camera_core"

[dependencies.log]
version = "0.4.8"

[dependencies.warp]
version = "0.2.2"
default-features = false
features = []

[dependencies.tokio]
version = "0.2.13"
default-features = false
features = ["macros", "sync", "rt-threaded", "blocking"]